Changes from Version 0.15-15 to 0.15-16 [XXX]

* Glitch fixed in npglpreg() where kernel types were not being passed
  to the NOMAD solver...

Changes from Version 0.15-14 to 0.15-15 [16-Apr-2012]

* NOTE: ** major change in default setting ** Default basis set to
  "auto" from "additive" for more robust results when using default
  settings with more than one continuous predictor (at the cost of
  additional computation for all supported bases, more memory
  required). Warnings changed to reflect this, additional warnings
  provided, but mainly when cv="none" (i.e. user is doing things
  manually and failing to provide defaults)

* Added switch for discarding singular bases during cross-validation
  (singular.ok=FALSE is default, so default is to discard singular
  bases)

* More stringent checking for ill-conditioned bases during
  cross-validation - previous checks were insufficient allowing poorly
  conditioned bases to creep into the final model (this may result in
  increased runtime for large datasets and multivariate tensor models)

* Potential runtime improvement for large bases (test for
  ill-conditioned bases was still relying in parts on rcond(t(B)%*%B),
  now using crossprod(B) which is more computationally efficient than
  rcond(t(B)%*%B) and has a substantially smaller memory footprint)

* No longer report basis type for one continuous predictor as all
  bases are identical in this case

Changes from Version 0.15-13 to 0.15-14 [22-Mar-2012]

* Added support for weights to crs()

* Corrected issue with reporting of cv function value by summary()
  with quantile regression splines

* Test for coexistence of pruning and quantile regression splines and
  stop with a message that these cannot coexist

* Check for valid derivative integer

Changes from Version 0.15-12 to 0.15-13 [05-Mar-2012]

* Added new function crsivderiv()

* More options added to crsiv()

* Modified vignette (spline_primer)
