@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-16
-Date: 2012-04-19
+Date: 2012-04-20
 Depends:
 Suggests: np, npRmpi, rgl, quadprog, quantreg
 Title: Categorical Regression Splines
