@@ -24,6 +24,7 @@ npglpreg(\dots)
          degree = NULL,
          leave.one.out = FALSE,
          ckertype = c("gaussian", "epanechnikov","uniform"),
+         ckerorder = 2,
          ukertype = c("liracine", "aitchisonaitken"),
          okertype = c("liracine", "wangvanryzin"),
          bwtype = c("fixed", "generalized_nn", "adaptive_nn", "auto"),
@@ -45,6 +46,7 @@ npglpreg(\dots)
          degree = NULL,
          leave.one.out = FALSE,
          ckertype = c("gaussian", "epanechnikov","uniform"),
+         ckerorder = 2,
          ukertype = c("liracine", "aitchisonaitken"),
          okertype = c("liracine", "wangvanryzin"),
          bwtype = c("fixed", "generalized_nn", "adaptive_nn", "auto"),
@@ -119,6 +121,13 @@ for each dimension of the continuous \code{x} in \code{txdat}}
     character string used to specify the continuous kernel type.
     Can be set as \code{gaussian}, \code{epanechnikov}, or
     \code{uniform}. Defaults to \code{gaussian}.
+  }
+
+  \item{ckerorder}{
+    numeric value specifying kernel order (one of
+    \code{(2,4,6,8)}). Kernel order specified along with a
+    \code{uniform} continuous kernel type will be ignored. Defaults to
+    \code{2}.
   }
 
   \item{ukertype}{
