@@ -3,6 +3,11 @@ Changes from Version 0.15-15 to 0.15-16 [XXX]
 * Glitch fixed in npglpreg() where kernel types were not being passed
   to the NOMAD solver...
 
+* Added ckerorder option to npglpreg()
+
+* More information output by summary for npglpreg() objects (kernel
+  type, order etc.)
+
 Changes from Version 0.15-14 to 0.15-15 [16-Apr-2012]
 
 * NOTE: ** major change in default setting ** Default basis set to
